fixed scrollbar issues

--- a/src/styles/print.scss
+++ b/src/styles/print.scss
@@ -56,5 +56,6 @@ div.printTitle {
    
     .emuwebapp-bottomPane { 
         margin-top: 0;
+        background-color: pink;
     }
 }
